[package]
name = "isutra"
version = "0.2.0"
edition = "2021"
description = "Intelligent command suggestor for your typo or wrong commands"
license = "Apache-2.0"
repository = "https://github.com/aravindgopall/sutra"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
strsim = "0.11"
ratatui = "0.26"
crossterm = "0.27"
unicode-width = "0.1"
which = "6"